syntax = "proto3";

message CalcRequest{
    float x_start = 1;
    float x_end = 2;
    float constant = 3;
    float linear_coefficient = 4;
    float quadratic_coefficient = 5;
    float cubic_coefficient = 6;
}

message CalcResponse{
    repeated float x = 1;
    repeated float y = 2;
}

service CalcService{
    rpc Calc(CalcRequest) returns (CalcResponse);
}